// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/presets/github/index fetchJSONFile() returns JSON 1`] = `
Object {
  "from": "api",
}
`;

exports[`config/presets/github/index fetchJSONFile() returns JSON 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/repo/contents/some-filename.json",
  },
]
`;

exports[`config/presets/github/index getPreset() should query custom paths 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/repo/contents/path/custom.json",
  },
]
`;

exports[`config/presets/github/index getPreset() should query preset within the file 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/repo/contents/somefile.json",
  },
]
`;

exports[`config/presets/github/index getPreset() should query subpreset 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/repo/contents/somefile.json",
  },
]
`;

exports[`config/presets/github/index getPreset() should return custom.json 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/repo/contents/custom.json",
  },
]
`;

exports[`config/presets/github/index getPreset() should return default.json 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/repo/contents/default.json",
  },
]
`;

exports[`config/presets/github/index getPreset() should throws not-found 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/repo/contents/somefile.json",
  },
]
`;

exports[`config/presets/github/index getPreset() throws if fails to parse 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/repo/contents/default.json",
  },
]
`;

exports[`config/presets/github/index getPreset() throws if no content 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/repo/contents/default.json",
  },
]
`;

exports[`config/presets/github/index getPreset() tries default then renovate 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/repo/contents/default.json",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/repo/contents/renovate.json",
  },
]
`;

exports[`config/presets/github/index getPresetFromEndpoint() uses custom endpoint 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.example.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.example.org/repos/some/repo/contents/default.json",
  },
]
`;

exports[`config/presets/github/index getPresetFromEndpoint() uses default endpoint 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "token abc",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/repo/contents/default.json",
  },
]
`;
